# bevy_maze

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: release.yml
src/: core.rs  generation.rs  main.rs  pathfinding.rs  ui.rs
src/core/: config.rs  grid.rs  map.rs  mod.rs  prelude.rs  registry.rs  state.rs
src/generation/: common.rs  dfs.rs  kruskal.rs  mod.rs  prelude.rs  prim.rs
src/pathfinding/: astar.rs  bfs.rs  bibfs.rs  common.rs  dijkstra.rs  greedy_bfs.rs  mod.rs  prelude.rs  wall_follower.rs
src/ui/: common.rs  config_ui.rs  map_ui.rs  mod.rs
