[package]
name = "Maze"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bevy = { version = "0.18.1", features = ["wayland"] }
rand = "0.10.1"
bevy_egui = "0.39.1"
#log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[features]
default = []
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1
debug = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
debug = 0

[profile.release]
codegen-units = 1
lto = "thin"
